@@ -1,3 +1,9 @@
+2007-02-18  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/irunner.py (pexpect_monkeypatch): patch pexpect to
+	protect against exceptions at Python shutdown time.  Patch
+	sumbmitted to upstream.
+
 2007-02-14  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ibrowse.py: If entering the first object level
